# pysolver_view

./: .buildinfo  .bumpversion.cfg  .gitignore  LICENSE.md  README.md  documentation.html.lnk  environment.yaml  genindex.html  index.html  objects.inv  py-modindex.html  pyproject.toml  search.html  searchindex.js
.doctrees/: environment.pickle  index.doctree
.doctrees/source/: introduction.doctree  tutorial_nonlinear_system.doctree  tutorial_optimization.doctree
.github/workflows/: ci.yml  deploy_docs.yaml  publish_to_pipy.yml
PySolverView/: nonlinear_system.py  optimization.py
_modules/: index.html
_modules/pysolver_view/: nonlinear_system.html  nonlinear_system_problems.html  numerical_differentiation.html  optimization.html  optimization_problems.html  optimization_wrappers.html  pysolver_utilities.html
_sources/: index.rst
_sources/source/: introduction.rst
_static/: documentation_options.js
demos/: demo_nonlinear_system.py  demo_optimization.py  demo_pygmo.py
demos/demo_gradient_free/: demo_nelder_mead.py
demos/demo_hessian_bfgs/: demo_ipopt_bfgs.py  demo_ipopt_hessian.py  demo_snopt_bfgs.py  notes.md
demos/demo_kkt_conditions/: demo_bfgs.py  demo_print_kkt.py  demo_print_report.py
demos/demo_numerical_differentiation/: demo_gradient.py  demo_hessian.py
demos/demo_scaling/: demo_print_report.py  demo_scaling.py
demos/demo_solver_comparison/: demo_solver_comparison.py
demos/demo_sparsity/: hessian_rosen.py  hessians_jax.py
demos/demo_tolerance/: demo_tolerance_ipopt.py  demo_tolerance_slsqp.py  demo_tolerance_snopt.py
demos/tutorials/: demo_nonlinear_system.py  (+2 more)
docs/: build_docs.py  conf.py  index.rst  publication.md
documentation/: conf.py
old_source/: PySolverView.nonlinear_system_problems.rst  PySolverView.rst  PySolverView.utilities.rst  introduction.rst  modules.rst
pysolver_view/: __init__.py  nonlinear_problems.py  nonlinear_solver.py  nonlinear_system_problems.py  numerical_differentiation.py  optimization.py  optimization_problems.py  optimization_solver.py  optimization_wrappers.py  pysolver_utilities.py
source/: introduction.html  tutorial_nonlinear_system.html  tutorial_optimization.html
tests/: run_tests.py  test_differentiation.py  test_nonlinear_system.py  test_optimization.py
(+80 files in other folders)
